# ModelRender

./: .gitignore  .gitmodules  CMakeLists.txt  cgutils.cpp  cgutils.h  main.cpp  obj_loader.cpp  readme.md
egl/: CMakeLists.txt  GLRender.cpp  GLRender.h
glad/include/glad/: glad.h
glbase/: CMakeLists.txt  glbase.h  update.sh
glbase/example/: CMakeLists.txt  main.cpp
glbase/glad/src/: glad.c
glbase/models/: base_render.h  base_render_impl.cpp  base_render_impl.h  geometry_render.cpp  geometry_render.h  obj_render.cpp  obj_render.h  render_helper.cpp  render_helper.h
glbase/renderer/: base_render.cpp  base_render.h  obj_render.cpp  obj_render.h  render_helper.cpp  render_helper.h
glbase/scene/: Camera.cpp  Camera.h  camera.cpp  camera.h  gl_context.cpp  gl_context.h  gl_thread.cpp  gl_thread.h  scene.cpp  scene.h  user_interface.cpp  user_interface.h
glbase/scene/ui/: glfw_user_interface.cpp  glfw_user_interface.h  ui_base.h
glbase/test/: CMakeLists.txt  simple_test.cpp
glbase/utils/: animator.cpp  animator.h  cgdefs.h  cgmacros.h  cgutils.cpp  cgutils.h  shader.cpp  shader.h  texture.cpp  texture.h
glfw-3.3.4/: CMakeLists.txt
resource/: light.fs  light.vs  plain.fs  plain.vs
resource/shader/: light.frag  light.fs  light.vert  light.vs  mvp.vert  plain.frag  plain.fs  plain.vert  polygon.vert  text.frag  yuv420_planar_render.frag
test/: unit_test.cpp
utils/: cgmacros.h  cgutils.cpp  cgutils.h  shader.cpp  shader.h
